--- a/kim-spirng/src/main/resources/static/index.html
+++ b/kim-spirng/src/main/resources/static/index.html
@@ -7,7 +7,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-Hello
-<a href="/hello">hello</a>
+메인페이지<br>
+<a href="/hello">hello</a> <br>
+<a href="/hello-mvc?name=zzzzzzzz">hello-mvc?name=zzzzzzzz</a><br>
+<a href="/hello-mvc?name=test">hello-mvc?name=test</a><br>
 </body>
 </html>
