--- a/kim-spirng/src/main/resources/static/index.html
+++ b/kim-spirng/src/main/resources/static/index.html
@@ -11,5 +11,7 @@
 <a href="/hello">hello</a> <br>
 <a href="/hello-mvc?name=zzzzzzzz">hello-mvc?name=zzzzzzzz</a><br>
 <a href="/hello-mvc?name=test">hello-mvc?name=test</a><br>
+<a href="/hello-api?name=apii">hello-api?name=apii</a><br>
+
 </body>
 </html>
