회원 서비스 및 의존성 주입

--- a/kim-spirng/src/main/resources/static/index.html
+++ b/kim-spirng/src/main/resources/static/index.html
@@ -11,7 +11,9 @@
 <a href="/hello">hello</a> <br>
 <a href="/hello-mvc?name=zzzzzzzz">hello-mvc?name=zzzzzzzz</a><br>
 <a href="/hello-mvc?name=test">hello-mvc?name=test</a><br>
+<a href="/hello-string?name=1">hello-string?name=1</a><br>
 <a href="/hello-api?name=apii">hello-api?name=apii</a><br>
+
 
 </body>
 </html>
